@startuml
' ====== Delicia Café - Diagrama de Clases ======
skinparam classAttributeIconSize 0
left to right direction

' ===== Clases principales =====
class Rol {
  -id: int
  +tipo: string  ' "Cliente" | "Staff" | "Admin"
  +descripcion: string
}

class Usuario {
  -id: int
  +nombre: string
  +email: string
  +passwordHash: string
  +rolId: int
  +registrar(): void
  +iniciarSesion(email, password): bool
}

' ===== Admin hereda de Usuario =====
class Admin {
  -id: int
  +nombre: string
  +email: string
  +passwordHash: string
  +crearProducto(p: Producto): void
  +editarProducto(idProd: int, datos: Producto): void
  +eliminarProducto(idProd: int): void
  +publicarProducto(idProd: int): void
  +gestionarUsuarios(): void
  +verReservas(): List<Reserva>
  +actualizarReserva(idRes: int, estado: EstadoReserva): void
}

class Producto {
  -id: int
  +nombre: string
  +precio: decimal
  +fechaAlta: date
  +stock: int
  +activo: bool
  +tipo: string  ' "Café" | "Pastelería"
  +ajustarStock(delta: int): void
}

class Categoria {
  -id: int
  +nombre: string
  +descripcion: string
}

class Reserva {
  -id: int
  +fecha: date
  +hora: time
  +personas: int
  +comentarios: string
  +estado: EstadoReserva
  +confirmar(): void
  +cancelar(): void
}

class EstadoReserva {
  Pendiente
  Confirmada
  Cancelada
}

' ===== Relaciones entre clases =====
Rol "1" --> "0..*" Usuario : define tipo
Usuario <|-- Admin : hereda
Usuario "1" --> "0..*" Reserva : crea
Admin "1" --> "0..*" Producto : gestiona
Producto "0..*" --> "1" Categoria : clasifica
Reserva --> EstadoReserva
Producto --> EstadoReserva : usa

' ===== Estilo visual (Delicia Café) =====
skinparam class {
  BackgroundColor #fff8f0
  BorderColor #b87b50
  ArrowColor #b87b50
  FontColor #3d2b1f
}
@enduml
